--- a/style.css
+++ b/style.css
@@ -40,6 +40,16 @@ button {
   color: snow;
 }
 
+@media only screen and (max-width: 900px) {
+  span {
+    font-size: 3.3em;
+  }
+  
+  button{
+    font-size: 35px;
+    padding: 5px;
+  }
+}
 
 @media only screen and (max-width: 450px) {
   span {
